--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!paho**
+test-1-tcplocalhost1883/**/*
 
 ### STS ###
 .apt_generated
