--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.16</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.intuit.demo</groupId>
+	<groupId>com.intuit</groupId>
 	<artifactId>vehicle-real-time-data-emitters-simulator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vehicle-real-time-data-emitters-simulator</name>
@@ -37,9 +37,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-mqtt</artifactId>
-			<version>6.1.3</version>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>1.2.5</version>
 		</dependency>
 
 		<dependency>
